--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ footer{
     margin-left: auto; */
     border:1px solid #ebebeb;
     box-shadow : 0 1px 20px 0 rgba(0,0,0,0,0.1);
+    background-color: #fff;
 }
 
 .name-text{
@@ -98,4 +99,31 @@ section{
     width: 12px;
     height: 12px;
 }
-    
+
+.graph { 
+    position: relative; /* IE is dumb */
+    width: 200px; 
+    border: 1px solid #B1D632; 
+    padding: 2px; 
+    font-size:11px;
+    margin-bottom:3px;
+    margin-left: 8px;
+}
+.graph .bar { 
+    display: block;
+    position: relative;
+    background: #B1D632; 
+    text-align: center; 
+    color: #333; 
+    height: 2em; 
+    line-height: 2em;            
+}
+.graph .bar span { position: absolute; left: 1em; }
+.graph-head{
+    display: flex;
+    padding-left: 16px;
+}
+.graph-title{
+    width: 45px;
+}
+
